doc: fix path issue with swagger
